修复 可重入加锁失败的问题